Change background image in hero section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 .hero {
   height: 100vh;
   background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-              url("photo.jpg") center/cover no-repeat;
+              url("Screenshot_2026-02-21-21-49-07-19_99c04817c0de5652397fc8b56c3b3817.jpg") center/cover no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: center;
